# BMPtoYUV

./: BMPtoYUV  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  bmp.cpp  bmp.h  cmake_install.cmake  main.cpp  yuv.cpp  yuv.h
CPP_TEST/: cpp_test.odt
EXAMPLE/: ExampleOutput.docx
